# Real-time-3D-Reconstruction-Anywhere-and-Anytime

./: .gitignore  CMakeLists.txt  README.md
client/: 7scene_main.cpp  ImageClient.cpp  ImageClient.hpp  main.cpp
common/: dataStructure.cpp  dataStructure.hpp  transfer.cpp  transfer.hpp
opencl/: opencl_header.h  tool.cpp  tool.hpp
reconstruction/: pointcloud.cpp  pointcloud.hpp  pointcloud_kernel.cl  reconstruction.cpp  reconstruction.hpp
rendering/: main.cpp  render.cpp  render.hpp  segment.glsl  shader.cpp  shader.hpp  vertex.glsl
server/: main.cpp  reconstructionServer_main.cpp
